[gd_scene load_steps=5 format=3 uid="uid://carljqywqdma2"]

[ext_resource type="Script" uid="uid://b0l5a4mul6kel" path="res://scenes/user interface/in game/InGameUI.gd" id="1_8xasy"]
[ext_resource type="Texture2D" uid="uid://dlsa8gssfh0hq" path="res://graphics/dungeon/squares_d.png" id="2_0klp6"]
[ext_resource type="Theme" uid="uid://c1iq7fcdp5qrl" path="res://scenes/user interface/title_screen_theme.tres" id="3_05rig"]
[ext_resource type="PackedScene" uid="uid://1bpha7t3c2rq" path="res://scenes/user interface/health_bar.tscn" id="4_5guob"]

[node name="InGameUI" type="CanvasLayer"]
script = ExtResource("1_8xasy")

[node name="LoadingScreen" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0klp6")
expand_mode = 1
stretch_mode = 1

[node name="PlayerUserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_05rig")

[node name="HealthBar" parent="PlayerUserInterface" instance=ExtResource("4_5guob")]
layout_mode = 1

[node name="Score" type="RichTextLabel" parent="PlayerUserInterface"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 11.0
offset_right = 44.0
offset_bottom = 19.0
text = "GLD: 0"
scroll_active = false

[node name="Speed" type="RichTextLabel" parent="PlayerUserInterface"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 17.0
offset_right = 45.0
offset_bottom = 24.0
text = "SPD: 0"
scroll_active = false

[node name="Defense" type="RichTextLabel" parent="PlayerUserInterface"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 23.0
offset_right = 17.0
offset_bottom = 31.0
text = "DEF: 0"
scroll_active = false

[node name="Attack" type="RichTextLabel" parent="PlayerUserInterface"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 29.0
offset_right = 18.0
offset_bottom = 37.0
text = "ATK: 0"
scroll_active = false
